[Refactor] : param
